--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".BootActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,10 +23,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity" >
+            android:name="com.example.helloworld.LoginActivity"
+            android:theme="@style/AppTheme" >
         </activity>
         <activity
-            android:name=".RegisterActivity" >
+            android:name="com.example.helloworld.RegisterActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity android:name="com.example.helloworld.HelloWorldActivity" >
+        </activity>
+        <activity android:name="com.example.helloworld.PasswordRecoverActivity" >
         </activity>
     </application>
 
