--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,10 @@
         </activity>
         <activity android:name="com.example.helloworld.PasswordRecoverActivity" >
         </activity>
+        <activity android:name="com.example.helloworld.FeedContentActivity" >
+        </activity>
+        <activity android:name="com.example.helloworld.NewContentActivity" >
+        </activity>
     </application>
 
 </manifest>
